# charmos

./: .clang-format  .clangd  .gdb_script  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  blkdebug.conf  build.sh  documentation.md  kernel.c  limine.conf  script.awk  style_guide.md  toolchain.cmake
.archive/: kernel.c
.github/: copilot-instructions.md
docs/: locking_idea.md
include/: acpi_print.h  ahci.h  alloc.h  asm.h  ata.h  bootstage.h  charmos.h  cmdline.h  colors.h  compiler.h  (+51 more)
kernel/: CMakeLists.txt  ahci.c  assert.c  bootstage.c  cmdline.c  disk.c  elf.c  get-deps  limine.h  linker-x86_64.ld  log.c  logo.c  main.c  mp.c  mutex.c  pit.c  profiling.c  rcu.c  requests.h  sleep.c  spin_lock.c  stat_series.c  string.c  syms.c  syscall.asm  syscall.c  test.asm  test.cpp  tests.c  time.c  ubsan.c
kernel/acpi/: acpi.S  acpi.c  acpi_print.c  cst.c  hpet.c  ioapic.c  irq_handlers.h  irq_list.h  lapic.c  shutdown.c  slit.c  srat.c  ssdt.c  uacpi_interface.c  uacpi_rw.c
kernel/alloc/: bitmap.c  pmalloc.c  slab.c  vmalloc.c
kernel/block/: ahci_bio.c  bcache.c  bio.c  ide_bio.c  noop_bio.c  nvme_bio.c  sched.c
kernel/block/sched/: boost.c  coalesce.c  dispatch.c  queue.c  sched.c
kernel/boot/: gdt.c  smap.c
kernel/console/: info.c  panic.asm  panic.c  printf.c
kernel/crypto/: chacha20.c  entropy_pool.c  prng.c
kernel/devices/: ahci.c  ata.c  ide.c  nvme.c  register.c  registry.c
kernel/devices/ahci/: cmd.c  init.c  rw.c
kernel/devices/ide/: ide.c  ident.c  rw.c
kernel/devices/nvme/: cmd.c  init.c  nvme.c  print.c  rw.c
kernel/disk/: ide.c
kernel/drivers/: e1000.c  pci.c  usb.c  usb_kb.c  xhci.c
kernel/drivers/ahci/: ahci.c  cmd.c  init.c  rw.c
kernel/drivers/ata/: ata.c  atapi.c  ide.c  ide_ident.c  ide_rw.c  ident.c  print.c  rw.c
kernel/drivers/ide/: ide.c  ident.c  rw.c
kernel/drivers/nvme/: bio.c  cmd.c  init.c  internal.h  nvme.c  print.c  rw.c
kernel/drivers/usb_generic/: internal.h  kb.c  usb.c
kernel/drivers/xhci/: cmd.c  init.c  internal.h  util.c  xhci.c
kernel/fs/: bcache.c  bio_sched.c  detect.c  ext.c  ext2.c  ext2_alloc.c  ext2_create.c  ext2_file.c  ext2_lookup.c  ext2_print.c  ext2_read.c  ext2_rw.c  ext2_walk.c  ext2_write.c  fat32.c  fat32_print.c  generic.c  iso9660.c  tmpfs.c  vfs.c
kernel/fs/ext2/: alloc.c  cache.c  create.c  delete.c  dir.c  ext2.c  ext2_alloc.c  ext2_create.c  ext2_delete.c  ext2_file.c  ext2_lookup.c  ext2_print.c  ext2_rw.c  ext2_walk.c  file.c  io.c  lookup.c  print.c  symlink.c  truncate.c  util.c  vfs_impl.c  walk.c
kernel/fs/fat/: alloc.c  create.c  del_mv.c  delete.c  fat.c  file.c  io.c  lookup.c  print.c  read.c  rw.c  util.c  walk.c  write.c
kernel/fs/fat32/: fat32.c  fat32_print.c  print.c  rw.c  time.c
kernel/int/: handlers.asm  handlers.c  idt.c  int_mac.mac  irq.c  isr_vectors_array.h  isrs.S  isrs.asm  kb.c
kernel/irq/: fault_isrs.h  idt.c  irq.c  isr_stubs.h  isr_vectors_array.h  isrs.asm
kernel/log/: dbg.c
kernel/math/: fixed.c  levenshtein.c  sort.c
kernel/mem/: asan.c  bitmap.c  elcm.c  hugepage.c  movealloc.c  numa.c  page_fault.c  page_internal.h  pmalloc.c  pmm.c  simple_alloc.c  slab.c  slab_internal.h  tlb.c  vaddr_alloc.c  vas_percpu.c  vas_percpu.h  vmm.c
kernel/mem/arena/: arena.c  init.c  internal.h
kernel/mem/buddy/: arena.c  buddy.c  core.c  domain.c  domain_alloc.c  domain_free.c  domain_init.c  free_queue.c  init.c  internal.h  pmalloc.c
kernel/mem/domain/: alloc.c  arena.c  free.c  free_queue.c  init.c  internal.h
kernel/mem/hugepage/: alloc.c  free.c  gc.c  hint.c  hugepage.c  init.c  internal.h  structures.c  translation_buffer.c  util.c
kernel/mem/slab/: aligned.c  check.c  domain.c  elcm.c  free_queue.c  gc.c  gc_internal.h  internal.h  percpu.c  slab.c  stat.c  stat_internal.h  worker.c
kernel/misc/: assert.c  cmdline.c  io.c  levenshtein.c  logo.c  minheap.c  print.c  prng.c  rbt.c  string.c  test.c  ubsan.c
kernel/mp/: domain.c  mp.c  topology.c
kernel/pci/: disk.c  pci.c
kernel/qemu/: shutdown.c
kernel/rust/: Cargo.toml
kernel/rust/src/: lib.rs
kernel/sch/: add.c  apc.c  balance.c  boost.c  climb.c  cs.asm  daemon.c  defer.c  domain.c  dpc.c  event_pool.c  fair.c  idle_thread.c  init.c  internal.h  irql.c  math.c  migrate.c  periodic_work.c  preempt.c  queue.c  reaper.c  remove.c  resched.c  sched.c  sched_profiling.h  steal.c  thread.c  thread_event.c  tid.c  timer_isr.c  wake.c  workqueue.c
kernel/sch/rt/: fn.c  init.c  internal.h  rt.c  slot.c  work.c
kernel/sch/workqueue/: init.c  internal.h  list.c  main.c  misc.c  queue.c  spawn.c  workqueue.c
kernel/smp/: domain.c  mp.c  percpu.c  percpu_domain.c  smp.c  topology.c
kernel/src/: acpi.c  dbg.c  gdt.c  idt.c  kb.c  main.c  mp.c  page.c  pmm.c  printf.c  requests.h  shutdown.c  smap.c  spin_lock.c  time.c  tt.h  vmalloc.c  vmm.c
kernel/src/acpi/: acpi.c
kernel/src/alloc/: pmalloc.c  vmalloc.c
kernel/src/boot/: gdt.c
kernel/src/console/: printf.c
kernel/src/fs/: vfs.c
kernel/src/int/: handlers.asm  idt.c  kb.c  pf.asm
kernel/src/log/: dbg.c
kernel/src/mem/: vmm.c
kernel/src/misc/: colors.h
kernel/src/qemu/: shutdown.c  time.c
kernel/src/rust/: Cargo.toml
kernel/src/rust/src/: lib.rs
kernel/src/sch/: cs.asm  cs.c  sched.c  slock.c  task.c  thread.c
kernel/src/system/: a_config.h  dsdt.h  fadt.h  gdt.h  idt.h  page.h  pmm.h  printf.h  shutdown.h  smap.h  vmalloc.h  vmm.h
kernel/structures/: list.c  minheap.c  pairing_heap.c  rbt.c
kernel/sync/: condvar.c  defer.c  lock_general_internal.h  mutex.c  mutex_internal.h  rcu.c  rcu_worker.c  rwlock.c  rwlock_internal.h  semaphore.c  turnstile.c
kernel/tests/: apc.c  bio.c  bio_sched.c  defer.c  ext2.c  hugepage.c  ifdef.py  log.c  mem.c  minheap.c  misc.c  mutex.c  nightmare.c  nightmare_sched.c  rcu.c  runner.c  rwlock.c  sched.c  sync_nightmare.c  thread.c  tmpfs.c
kernel/thread/: apc.c  daemon.c  defer.c  dpc.c  idle_thread.c  io_wait.c  reaper.c  thread.c  thread_event.c  tid.c
kernel/thread/workqueue/: internal.h  main.c  queue.c  spawn.c  workqueue.c
(+203 files in other folders)
